--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
-	"name": "gpu-scrapper",
-	"version": "1.0.0",
-	"description": "",
-	"main": "src/index.js",
-	"type": "module",
-	"scripts": {
-		"prisma-build": "npx prisma generate",
-		"dev": "nodemon src/index.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@prisma/client": "^4.9.0",
-		"axios": "^1.2.4",
-		"node-cron": "^3.0.2",
-		"node-html-parser": "^6.1.4",
-		"path": "^0.12.7"
-	},
-	"devDependencies": {
-		"dotenv": "^16.0.3",
-		"nodemon": "^2.0.20",
-		"prisma": "^4.9.0"
-	}
+  "name": "gpu-scrapper",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/cron.js",
+  "type": "module",
+  "scripts": {
+    "prisma-build": "npx prisma generate",
+    "start-cron": "node src/cron.js",
+    "dev": "nodemon src/cron.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "^4.9.0",
+    "axios": "^1.2.4",
+    "node-cron": "^3.0.2",
+    "node-html-parser": "^6.1.4",
+    "path": "^0.12.7",
+    "prettier": "^2.8.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.9.0"
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "semi": false,
+    "trailingComma": "es5",
+    "bracketSameLine": false,
+    "singleQuote": true
+  }
 }
